<resources>
    <string name="app_name">Image Machine</string>
    <string name="add">Add</string>
    <string name="label_first_time">Please add data first at the right top menu</string>
    <string name="sort">Sort By</string>
    <string name="no_data">No Data</string>
    <string name="edit_machine">Edit Machine</string>
    <string name="delete_machine">Delete Machine</string>
    <string name="machine_name">Name</string>
    <string name="machine_type">Type</string>
    <string name="last_maintenance">Last Maintenance Date</string>
    <string name="add_image">Add Image</string>
    <string name="add_machine">Add Machine</string>
    <string name="content_delete_image">Delete Image</string>
    <string name="machine_number">Machine Number (For QR)</string>
    <string name="delete_image">Delete Image</string>
</resources>